--- a/index.html
+++ b/index.html
@@ -6,95 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Sono', sans-serif;
-      background-color: #f2f2f2;
-    }
-    .plan-button {
-      color: #ffffff;
-      padding: 10px;
-      border-radius: 10px;
-      border: none;
-    }
-    .plan-button:hover {
-      color: #ffffff;
-      background-color: #ff0000;
-      padding: 10px;
-      border-radius: 10px;
-      border: none;
-    }
-    .plan-title {
-      padding: 1rem;
-      font-weight: bold;
-      font-size: 1.5rem;
-      margin: 0 -20px 10px -20px;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
-    }
-    .basic {
-      background-image: linear-gradient(to right, #ff660049, #ff6600, #ff0040);
-    }
-    .standard {
-      background-image: linear-gradient(to right, #4ba8ff5e, #006effa4, #5900ffd7);
-    }
-    .premium {
-      background-image: linear-gradient(to right, #00ff6236, #00ff62be, #b3ff00);
-      color: black;
-    }
-    .plan-price {
-      font-weight: bold;
-      font-size: 3rem;
-      margin: 10px;
-    }
-    .pricing-container {
-      display: flex;
-      justify-content: center;
-      align-items: center; /* align-items NON funzion senza height!!!!!!!!!!!!!! */
-      height: 100vh; 
-      gap: 2rem;
-    }
-    .pricing-plan { /* questo rende responsive le carte */
-      flex: 1; /* grow, shrink e basis = 1 */
-      max-width: 400px; /* dimensione massima */
-      background-color: #ffffff;
-      border-radius: 5px;
-      text-align: center;
-      padding: 0 20px 20px 20px;
-    }
-    .plan-features {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-    .plan-features li {
-      margin-bottom: 20px;
-    }
-    /* Hint: What can you do with a media query and flexbox? */
-    @media (max-width: 1250px) {
-      .pricing-container {
-        flex-direction: column;
-        height: 100%;
-      }
-    }
-    @media (max-width: 600px) {
-          .plan-price {
-          font-size: 2rem;
-        }
-        .plan-title {
-          font-size: 1rem;
-        }
-        .pricing-plan {
-        min-width: 300px;
-      }
-      .plan-features {
-        font-size: 1rem;
-      }
-      .plan-features li {
-        margin-bottom: 10px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="./css/Style.css">
 </head>
 
 <body>
